# pico-threadx-project

./: .gitmodules  CMakeLists.txt  main.c  tx_initialize_low_level.S
